examples/010-NetworkPolicies/nginx-run.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: nginx-run-deployment
  name: nginx-run-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx-run-app
  template:
    metadata:
      labels:
        k8s-app: nginx-run-app
      name: nginx-run-app
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx-run-app
      restartPolicy: Always
