examples/010-NetworkPolicies/pod-with-nw-policy.yaml
 
kind: Pod
apiVersion: v1
metadata:
  name: web-pod
  namespace: default
  labels:
    app: web  <- labeled web
spec:
  containers:
    - name: web
      image: alpine
 
---
 
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: web
